<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.emakina.iclu.generalapp.activities.BigBirdActivity">

    <TextView
        android:id="@+id/choice_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/TitleTheme"
        android:text="@string/choice_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp" />

    <Button
        android:id="@+id/btn_magical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/big_magical"
        android:theme="@style/ButtonTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/choice_msg" />

    <Button
        android:id="@+id/btn_plague"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/big_plague"
        android:theme="@style/ButtonTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/btn_magical" />

    <Button
        android:id="@+id/btn_vermillion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/big_vermillion"
        android:theme="@style/ButtonTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/btn_plague" />

    <Button
        android:id="@+id/btn_image_shit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_image"
        android:theme="@style/ButtonTheme"
        app:layout_constraintTop_toBottomOf="@id/btn_vermillion"
        android:layout_marginTop="120dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
