<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.emakina.iclu.generalapp.activities.MainActivity">

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_bird"
        android:theme="@style/TitleTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp" />

    <Button
        android:id="@+id/btn_big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_big"
        android:theme="@style/ButtonTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_msg" />

    <Button
        android:id="@+id/btn_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_medium"
        android:theme="@style/ButtonTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/btn_big" />

    <Button
        android:id="@+id/btn_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_small"
        android:theme="@style/ButtonTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/btn_medium" />

    <Switch
        android:id="@+id/switch_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_small"

        />

    <Button
        android:id="@+id/btn_magical_shit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_magical"
        android:theme="@style/ButtonTheme"
        app:layout_constraintTop_toBottomOf="@id/switch_btn"
        android:layout_marginTop="120dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
